# ai-pipeline-evaluation-harness

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
contracts/: support_ticket_output_contract.json  support_ticket_severity_policy_contract.json
data/: README.md
data/golden/: support_ticket_golden.csv
data/runs/: support_ticket_baseline_outputs.csv  support_ticket_candidate_outputs.csv
data/synthetic/: support_ticket_source_records.csv
docs/: architecture.md  calibration.md  failure_modes.md  golden_provenance.md  human_review_boundaries.md  quality_model.md  regression_gates.md  what_this_is_not.md
examples/: scale_fixture_evaluation.json  support_ticket_evaluation.json
examples/scenarios/: contract_validation_failure.json  coverage_improves_critical_review.json  coverage_improves_false_acceptance_fails.json  global_improves_segment_regresses.json  passes_all_gates.json  severity_override_gate_fails.json  severity_override_requires_review.json
reports/: support_ticket_evaluation.md
src/ai_data_harness/: __init__.py  adjudication.py  calibration.py  cli.py  common.py  config.py  contracts.py  evaluation.py  gates.py  io.py  metrics.py  reporting.py  synthetic.py
tests/integration/: test_cli.py  test_scenario_configs.py
tests/unit/: test_adjudication.py  test_calibration.py  test_config.py  test_contracts.py  test_gates.py  test_io.py  test_metrics.py  test_package.py  test_reporting.py  test_scale_fixture.py  test_synthetic_fixtures.py
(+7 files in other folders)
